🎨 Improve the sql struct
