# backend/internal/entity/transaction_log.go
@@ -1,19 +1,22 @@
 package entity
 
-type TransactionLog struct {
+type LogTransaction struct {
 	LogID             int    `json:"log_id" example:"1"`
 	UserID            int    `json:"user_id" example:"42"`
-	TransactionTypeID int    `json:"transaction_type_id" example:"2"`
-	AssetID           int    `json:"asset_id" example:"1001"`
+	TransactionTypeID int    `json:"transaction_type_id" example:"1"`
+	Asset             Asset  `json:"asset"`
+	AssetCode         string `json:"asset_code" example:"USDC"`
+	AssetIssuer       string `json:"AssetIssuer" example:"HJGDS..."`
 	Date              string `json:"date" example:"2023-08-10T14:30:00Z"`
+	Amount            string `json:"amount" example:"100000"`
 	Description       string `json:"description" example:"Mint Asset"`
 }
 
 const (
-	CreateAsset = "Create Asset"
-	MintAsset   = "Mint Asset"
-	UpdateAuth  = "Update Auth Flags"
-	Clawback    = "Clawback Asset"
-	BurnAsset   = "Burn Asset"
-	Transfer    = "Transfer Asset"
+	CreateAsset     int = iota + 1 // CreateAsset = 1
+	MintAsset                      // MintAsset = 2
+	UpdateAuthFlags                // UpdateAuthFlags = 3
+	ClawbackAsset                  // ClawbackAsset = 4
+	BurnAsset                      // BurnAsset = 5
+	TransferAsset                  // TransferAsset = 6
 )
